@@ -5,6 +5,7 @@ This is a bug fix release.
 
 Minor bug fixed:
 
+* r3775: fixed _compute_public_path() when using a query string
 * r3754: updated Propel to 1.2.1 (http://propel.phpdb.org/trac/query?status=closed&milestone=1.2.1&resolution=fixed&order=priority)
 * r3746: fixed output escaping and _get_object_list() (#1593)
 * r3699: fixed highlight_text() doesn't work with / (#1621)
